# django-cedar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-07-11-django-cedar-extraction.md  2026-07-11-get-user-model-principal.md
docs/superpowers/specs/: 2026-07-11-django-cedar-extraction-design.md  2026-07-11-get-user-model-principal-design.md
src/django_cedar/: __init__.py  apps.py  authz.py  checks.py  views.py
tests/: models.py  providers.py  settings.py  test_authz.py  test_checks.py  test_packaging.py  test_public_api.py  test_settings_loading.py  test_user_models.py  test_views.py
